@@ -1,5 +1,5 @@
 # This Makefile.PL for Alien-libuv was generated by
-# Dist::Zilla::Plugin::MakeMaker::Awesome 0.47.
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.48.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
 use strict;
@@ -113,7 +113,15 @@ if ( $^O eq 'MSWin32' ) {
 WriteMakefile(%WriteMakefileArgs);
 
 # BEGIN code inserted by Dist::Zilla::Plugin::AlienBuild
-sub MY::postamble {
-  $abmm->mm_postamble;
+{ package
+    MY;
+  sub postamble {
+    $abmm->mm_postamble(@_);
+  }
+  sub install {
+    $abmm->can('mm_install')
+      ? $abmm->mm_install(@_)
+      : shift->SUPER::install(@_);
+  }
 }
 # END code inserted by Dist::Zilla::Plugin::AlienBuild
