@@ -6,29 +6,30 @@ copyright_year   = 2017
 ; version          = 1.007
 ; is_trial         = 1
 
-[Git::GatherDir]
-exclude_filename = Makefile.PL
-exclude_filename = META.json
-exclude_filename = README.md
-exclude_filename = LICENSE
-exclude_filename = t/00-report-prereqs.t
+[ReadmeAnyFromPod / Markdown_Readme]
+type = gfm
+source_filename = lib/Alien/libuv.pm
+filename = README.md
+location = root
 
-[@Starter]
--remove = GatherDir
+[Regenerate::AfterReleasers]
+plugin = Markdown_Readme
+
+[@Starter::Git]
 revision = 3
 managed_versions = 1
 installer = MakeMaker::Awesome
 MakeMaker::Awesome.header_file = .mm_awesome_header.pl
 RewriteVersion.global = 1
 NextRelease.format = %-9v %{yyyy-MM-dd}d
+regenerate = Makefile.PL
+regenerate = META.json
+regenerate = README.md
+regenerate = LICENSE
+regenerate = t/00-report-prereqs.t
+Git::Check.allow_dirty = META.json
 
 [AlienBuild]
-
-[ReadmeAnyFromPod / Markdown_Readme]
-type = gfm
-source_filename = lib/Alien/libuv.pm
-filename = README.md
-location = root
 
 [Prereqs::FromCPANfile]
 
@@ -47,7 +48,6 @@ Alien::cmake3 = 0.04
 [GithubMeta]
 issues  = 1
 user    = genio
-[@Git]
 
 [GitHubREADME::Badge]
 badges = travis
@@ -72,10 +72,3 @@ stopword = github
 stopword = stopwords
 stopword = wordlist
 stopword = Ollis
-
-[CopyFilesFromBuild]
-copy = lib/Alien/libuv.pm
-copy = Makefile.PL
-copy = META.json
-copy = LICENSE
-copy = t/00-report-prereqs.t
